--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,7 @@
         background-color: red;
         border-radius: 50%;
         pointer-events: none;
+        z-index:11111111111;
     }
 
     .click-effect {
@@ -121,7 +122,7 @@
         </div>
     </div>
 
-    <div class="container my-2" style="border: 2px solid black;" id="remote-screen"></div>
+    <div class="container my-2" style="border: 2px solid black; width:100%; height:100%;" id="remote-screen"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
