--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
         background-color: red;
         border-radius: 50%;
         pointer-events: none;
-        z-index:11111111111;
+        z-index: 111111111111;
     }
 
     .click-effect {
@@ -122,7 +122,9 @@
         </div>
     </div>
 
-    <div class="container my-2" style="border: 2px solid black; width:100%; height:100%;" id="remote-screen"></div>
+    <div class="container my-2" style="border: 2px solid black; width: 100%; height: 100%;" id="remote-screen">
+        <iframe src="https://clouderp.eschoolzone.in/" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
