--- a/index2.html
+++ b/index2.html
@@ -8,47 +8,46 @@
     <title>Dzone Screen Sharing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        #pointer {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: red;
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 9999;
+        }
+
+        .click-effect {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: rgba(255, 0, 0, 0.5);
+            border-radius: 50%;
+            animation: click-animation 0.5s ease-out;
+            pointer-events: none;
+        }
+
+        @keyframes click-animation {
+            from {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            to {
+                transform: scale(2);
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
-<style>
-    #pointer {
-        position: absolute;
-        width: 10px;
-        height: 10px;
-        background-color: red;
-        border-radius: 50%;
-        pointer-events: none;
-        z-index: 111111111111;
-    }
-
-    .click-effect {
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        background-color: rgba(255, 0, 0, 0.5);
-        border-radius: 50%;
-        animation: click-animation 0.5s ease-out;
-        pointer-events: none;
-    }
-
-    @keyframes click-animation {
-        from {
-            transform: scale(1);
-            opacity: 1;
-        }
-
-        to {
-            transform: scale(2);
-            opacity: 0;
-        }
-    }
-</style>
 
 <body>
     <div id="pointer"></div>
     <nav class="navbar navbar-light bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand">Dzone Screen Sharing</a>
-
             <a class="navbar-brand" id="host-code-display">Your Code:- &nbsp;&nbsp;&nbsp;</a>
 
             <form class="d-flex input-group w-auto" action="#" onsubmit="javascript:void()">
@@ -64,7 +63,6 @@
             </form>
         </div>
     </nav>
-
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -91,8 +89,6 @@
         </div>
     </div>
 
-
-
     <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -113,7 +109,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel11">Screen Sharing Finisted</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel11">Screen Sharing Finished</h1>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
@@ -122,15 +118,13 @@
         </div>
     </div>
 
-    <div class="container my-2" style="border: 2px solid black; width: 100%; height: 100%;" id="remote-screen">
-        <iframe src="https://clouderp.eschoolzone.in/" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+    <div class="my-2" style="border: 2px solid black; width: 100%; height: 100%; position: absolute;"
+        id="remote-screen">
+        <iframe src="https://clouderp.eschoolzone.in/" id="iframe" frameborder="0"
+            style="width: 100%; height: 100%;"></iframe>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="./firebase-config.js"></script>
     <script type="module" src="./script.js"></script>
 </body>
